@@ -15,4 +15,5 @@ EXPORTS
     udefrag_get_error_description
     udefrag_set_log_file_path
     udefrag_flush_dbg_log
+    udefrag_dbg_print=winx_dbg_print
     udefrag_init_failed
